# garagem-back

./: .env_exemplo  .pdm-python  db.sqlite3  garagem.json  pyproject.toml  requirements.txt
config/: settings.py
garagem/models/: veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: veiculo.py
